Make button to change grid size

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <div class="container">
       <div id="grid"></div>
     </div>
+    <div class="container">
+      <button id="changeSizeBtn">Change grid size</button>
+    </div>
   </body>
   <script src="app.js"></script>
 </html>
